--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 			<div class="timeline__item-body-content">
 				<p class="timeline__item-p"><ul>
 					<li><h3>OpenClassRooms — à distance </h3>
-						Avril 2023 À AUJOURD’HUI: apprentissage des langages web & programmation.
+						Avril 2023 À Aujourd'hui: apprentissage des langages web & programmation.
 						</li>
 						<br>
 					<li><h3>Licence Culture & Média</h3> non Obtenue – ULCO Dunkerque 2012</h3> <br>
@@ -128,7 +128,7 @@
 			J'aidais déjà des associations à créer des affiches et des vidéos pour leurs événements avant d'en faire une entreprise. Je serais ravi de transmettre les rudiments de la communication.
 		<br> 
 		<br><h2>Suivi personalisé</h2>
-			La pédagogie c'est aussi la question d'une relation et avec de simples notes sur l'avancement de chacun et les objectif à atteindre, nous pouvons lier une relation de confiance permettant de s'épanouir à tout âge.
+			La pédagogie c'est aussi la question d'une relation et avec de simples notes sur l'avancement de chacun et les objectifs à atteindre, nous pouvons lier une relation de confiance permettant de s'épanouir à tout âge.
 			<br>
 		<br> <h2>Action en synergie</h2>
 			Dans une démarche de création, on apprend que chaque contrainte est une part de travail économisée. Je suis donc à l'écoute des consignes sur le contenu à transmettre lors des interventions.
