--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
 		<polyline points="7 10,12 15,17 10" fill="none" stroke="currentcolor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" />
 	</symbol>
 </svg>
-<h1> Léo Thomassey <br> Conseiller Numérique</h1>
+<h1> Léo Thomassey </h1>
 <div id="timeline" class="timeline">
 	<div class="timeline__item">
 		<div class="timeline__item-header">
