--- a/index.html
+++ b/index.html
@@ -43,7 +43,10 @@
 						</li><br>
 					<li><h3>Agent de Bibliothèque – Bibliothèque de Vergongheon (43) – Janvier à Juin 2017 </h3>
 						Opérations courantes de Bibliothèque, Organisation d’événements, animation d’ateliers avec l’école élémentaire. Lectures de contes.
-						</li>
+						</li><br>
+					<li><h3> Agent de Bibliothèque: collection audiovisuel – Bibliothèque Universitaire ULCO Dunkerque (59) – Janvier à Juin 2012</h3>
+						Opérations courantes de Bibliothèque, renseignements, prêts et retours des DVDs, rangement et classement des boîtes et des disques.
+					</li>
 				  </ul>
 				</p>
 			</div>
