--- a/index.html
+++ b/index.html
@@ -71,11 +71,14 @@
 						Avril 2023 À Aujourd'hui: apprentissage des langages web & programmation.
 						</li>
 						<br>
-					<li><h3>Licence Culture & Média</h3> non Obtenue – ULCO Dunkerque 2012</h3> <br>
+					<li><h3>Licence Culture & Média</h3> L2 – ULCO Dunkerque 2012</h3> <br>
 						une licence sur la médiation culturelle qui étudie tous liens possible entre artistes et publics.
 					</li>
 					<br>
-					<li><h3>Bac communication GRH </h3> obtenu – Lycée Jules Froment 2010 </h3></li>
+					<li><h3>Bac Communication et Gestion des Ressources Humaines</h3> obtenu – Lycée Jules Froment 2010 </h3><br>
+						Un bac axé sur les besoins des entreprises où l'on apprend à manier les outils du quotidien et travailler en groupes (création graphique, SQL, MAMP, théorie des algorythmes, psycho-sociologie)</li>
+					<br>
+					<li><h3>BEP Vente Actions Marchandes obtenu- Lycée Marcel Gimond 2008 </h3></li>
 				   
 				  </ul>
 				</p>
