--- a/index.html
+++ b/index.html
@@ -21,10 +21,10 @@
 					<use href="#arrow" />
 				</svg>
 				<span class="timeline__dot"></span>
-				<span id="item1-name" class="timeline__meta">
+			</button>
+				<span class="timeline__arrow" type="button" id="item1" aria-labelledby="item1-name" aria-expanded="false" aria-controls="item1-ctrld" aria-haspopup="true" data-item="1">
 					<strong class="timeline__title">Expériences</strong>
 			</span>
-			</button>
 		</div>
 		<div class="timeline__item-body" id="item1-ctrld" role="region" aria-labelledby="item1" aria-hidden="true">
 			<div class="timeline__item-body-content">
