rétablissement index.html

--- a/index.html
+++ b/index.html
@@ -20,10 +20,9 @@
 				<svg class="timeline__arrow-icon" viewBox="0 0 24 24" width="24px" height="24px">
 					<use href="#arrow" />
 				</svg>
-				<span class="timeline__dot"></span>
-			</button>
-				<span class="timeline__arrow" type="button" id="item1" aria-labelledby="item1-name" aria-expanded="false" aria-controls="item1-ctrld" aria-haspopup="true" data-item="1">
-					<strong class="timeline__title">Expériences</strong>
+				span class="timeline__dot"></span>
+			<span id="item2-name" class="timeline__meta">
+				<strong class="timeline__title">Expériences</strong>
 			</span>
 		</div>
 		<div class="timeline__item-body" id="item1-ctrld" role="region" aria-labelledby="item1" aria-hidden="true">
