--- a/index.html
+++ b/index.html
@@ -20,8 +20,9 @@
 				<svg class="timeline__arrow-icon" viewBox="0 0 24 24" width="24px" height="24px">
 					<use href="#arrow" />
 				</svg>
-				span class="timeline__dot"></span>
-			<span id="item2-name" class="timeline__meta">
+			</button>
+			<span class="timeline__dot"></span>
+			<span id="item1-name" class="timeline__meta">
 				<strong class="timeline__title">Expériences</strong>
 			</span>
 		</div>
