--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
 			</button>
 			<span class="timeline__dot"></span>
 			<span id="item1-name" class="timeline__meta">
-				<strong class="timeline__title">Expériences</strong>
+				<strong class="timeline__title" type="button" id="item1" aria-labelledby="item1-name" aria-expanded="false" aria-controls="item1-ctrld" aria-haspopup="true" data-item="1">Expériences</strong>
 			</span>
 		</div>
 		<div class="timeline__item-body" id="item1-ctrld" role="region" aria-labelledby="item1" aria-hidden="true">
