--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 			</button>
 			<span class="timeline__dot"></span>
 			<span id="item2-name" class="timeline__meta">
-				<strong class="timeline__title">Scolarité</strong>
+				<strong class="timeline__title"  type="button" id="item2" aria-labelledby="item2-name" aria-expanded="false" aria-controls="item2-ctrld" aria-haspopup="true" data-item="2">Scolarité</strong>
 			</span>
 		</div>
 		<div class="timeline__item-body" id="item2-ctrld" role="region" aria-labelledby="item2" aria-hidden="true">
@@ -94,7 +94,7 @@
 			</button>
 			<span class="timeline__dot"></span>
 			<span id="item4-name" class="timeline__meta">
-				<strong class="timeline__title">Compétences</strong>
+				<strong class="timeline__title" type="button" id="item4" aria-labelledby="item4-name" aria-expanded="false" aria-controls="item4-ctrld" aria-haspopup="true" data-item="4">Compétences</strong>
 			</span>
 		</div>
 		<div class="timeline__item-body" id="item4-ctrld" role="region" aria-labelledby="item4" aria-hidden="true">
@@ -122,7 +122,7 @@
 			</button>
 			<span class="timeline__dot"></span>
 			<span id="item6-name" class="timeline__meta">
-				<strong class="timeline__title">Coordonnées</strong>
+				<strong class="timeline__title" type="button" id="item6" aria-labelledby="item6-name" aria-expanded="false" aria-controls="item6-ctrld" aria-haspopup="true" data-item="6">Coordonnées</strong>
 			</span>
 		</div>
 		<div class="timeline__item-body" id="item6-ctrld" role="region" aria-labelledby="item6" aria-hidden="true">
