many content and responsive design implementation

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 	</symbol>
 </svg>
 <h1> Léo Thomassey </h1>
+<p>Reconversion ou évolution naturelle, je change de cap pour suivre ma passion pour l'informatique. Mettre mes compétences au service de mes contemporains et contribuer à des projets qui sont utiles m'est aujourd'hui indispensable. </p>
 <div id="timeline" class="timeline">
 	<div class="timeline__item">
 		<div class="timeline__item-header">
@@ -23,12 +24,15 @@
 			</button>
 			<span class="timeline__dot"></span>
 			<span id="item1-name" class="timeline__meta">
-				<strong class="timeline__title" type="button" id="item1" aria-labelledby="item1-name" aria-expanded="false" aria-controls="item1-ctrld" aria-haspopup="true" data-item="1">Expériences</strong>
+				<strong class="timeline__title" type="button" id="item1" aria-labelledby="item1-name" aria-expanded="false" aria-controls="item1-ctrld" aria-haspopup="true" data-item="1">Expériences Professionelles</strong>
 			</span>
 		</div>
 		<div class="timeline__item-body" id="item1-ctrld" role="region" aria-labelledby="item1" aria-hidden="true">
 			<div class="timeline__item-body-content">
 				<p class="timeline__item-p"><ul>
+					<li><h3> De nombreux postes saisonniers en agriculture et en Restauration.</h3>
+						Saisonnier depuis l'adolescence, ces expériences m'ont permis de voyager, de découvrir et apprendre beaucoup de choses. Aussi mon temps de loisir a toujours été occupé de projets menés seul ou en associations.
+					</li><br>
 					<li><h3>Assisant d'éducation - Lycée Camille Vernet (Valence) - 2021/2022 </h3>
 						Supervision de l'internat mixte, maintien du lien entre l'équipe pédagogique et les élèves et les parents via pronote et organisation du championnat de temps d'écran du dortoir des garçons.
 						</li><br>
@@ -68,17 +72,53 @@
 			<div class="timeline__item-body-content">
 				<p class="timeline__item-p"><ul>
 					<li><h3>OpenClassRooms — à distance </h3>
-						Avril 2023 À Aujourd'hui: apprentissage des langages web & programmation.
+						Avril 2023 À Aujourd'hui: apprentissage de langages web & programmation.
 						</li>
 						<br>
 					<li><h3>Licence Culture & Média</h3> L2 – ULCO Dunkerque 2012</h3> <br>
-						une licence sur la médiation culturelle qui étudie tous liens possible entre artistes et publics.
+						Une licence sur la médiation culturelle qui étudie tous liens possible entre artistes et publics.
 					</li>
 					<br>
-					<li><h3>Bac Communication et Gestion des Ressources Humaines</h3> obtenu – Lycée Jules Froment 2010 </h3><br>
+					<li><h3>Bac Communication et Gestion des Ressources Humaines</h3> Obtenu – Lycée Jules Froment 2010 </h3><br>
 						Un bac axé sur les besoins des entreprises où l'on apprend à manier les outils du quotidien et travailler en groupes (création graphique, SQL, MAMP, théorie des algorythmes, psycho-sociologie)</li>
 					<br>
 					<li><h3>BEP Vente Actions Marchandes obtenu- Lycée Marcel Gimond 2008 </h3></li>
+				   
+				  </ul>
+				</p>
+			</div>
+		</div>
+	</div>
+	<div class="timeline__item">
+		<div class="timeline__item-header">
+			<button class="timeline__arrow" type="button" id="item3" aria-labelledby="item2-name" aria-expanded="false" aria-controls="item3-ctrld" aria-haspopup="true" data-item="3">
+				<svg class="timeline__arrow-icon" viewBox="0 0 24 24" width="24px" height="24px">
+					<use href="#arrow" />
+				</svg>
+			</button>
+			<span class="timeline__dot"></span>
+			<span id="item2-name" class="timeline__meta">
+				<strong class="timeline__title"  type="button" id="item3" aria-labelledby="item3-name" aria-expanded="false" aria-controls="item3-ctrld" aria-haspopup="true" data-item="3">Projets</strong>
+			</span>
+		</div>
+		<div class="timeline__item-body" id="item3-ctrld" role="region" aria-labelledby="item3" aria-hidden="true">
+			<div class="timeline__item-body-content">
+				<p class="timeline__item-p"><ul>
+					<li><h2>Projets IT récents</h2></li> <br>
+					<li><h3>Serveur Autonome</h3>Raspberry Pi</h3> <br>
+						Création d'un serveur hébergeant un site internet statique. Le serveur est autonome en énergie grâce à un panneau photovoltaïque et contrôlé par un VNC.
+						</li>
+						<br>
+					<li><h3>Routeur 4G</h3> Raspberry Pi</h3> <br>
+						Le routeur distribue en wifi une connexion internet via le réseau de données mobiles.
+					</li>
+					<br>
+					<li><h3>Entretien de matériel</h3>Réparations et mises à niveau</h3><br>
+						Tous les matériels doivent être entretenus, je remplace donc les disques internes, barettes de RAM, lecteurs. Tout ce qui est démontable. Quand la réparation est trop coûteuse, il s'agit de trouver une seconde vie aux composants en état.</li>
+					<br>
+					<li><h3>Automates</h3>
+					Par pur loisir, je fabrique des automates à manivelle, un temps de détente sur des gestes précis et une conception mécanique rudimentaire.
+					</li>
 				   
 				  </ul>
 				</p>
