petites modification responsive design et contenu

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
 	</symbol>
 </svg>
 <h1> Léo Thomassey </h1>
-<p>Reconversion ou évolution naturelle, je change de cap pour suivre ma passion pour l'informatique. Mettre mes compétences au service de mes contemporains et contribuer à des projets qui sont utiles m'est aujourd'hui indispensable. </p>
+<p class="bio" >Reconversion ou évolution naturelle, je change de cap pour suivre ma passion pour l'informatique. Mettre mes compétences au service de mes contemporains et contribuer à des projets qui sont utiles m'est aujourd'hui indispensable. </p>
 <div id="timeline" class="timeline">
 	<div class="timeline__item">
 		<div class="timeline__item-header">
@@ -105,8 +105,16 @@
 			<div class="timeline__item-body-content">
 				<p class="timeline__item-p"><ul>
 					<li><h2>Projets IT récents</h2></li> <br>
+					<li><h3>Smartphone Windows 11</h3>(en cours)</h3> <br>
+						Un smartphone executant windows 11 ARM, rendu possible par <a href="https://renegade-project.tech/en/home">Renegade project</a> 
+						</li>
+						<br>
+					<li><h3>Télévision connéctée</h3>Raspberry Pi (en cours)</h3> <br>
+						Installation d'un Android TV sur raspberry pi avec télécommande fonctionelle. 
+						</li>
+						<br>
 					<li><h3>Serveur Autonome</h3>Raspberry Pi</h3> <br>
-						Création d'un serveur hébergeant un site internet statique. Le serveur est autonome en énergie grâce à un panneau photovoltaïque et contrôlé par un VNC.
+						Création d'un serveur hébergeant un site internet statique. Le serveur est autonome en énergie grâce à un panneau photovoltaïque et contrôlé à distance par un VNC.
 						</li>
 						<br>
 					<li><h3>Routeur 4G</h3> Raspberry Pi</h3> <br>
@@ -116,7 +124,7 @@
 					<li><h3>Entretien de matériel</h3>Réparations et mises à niveau</h3><br>
 						Tous les matériels doivent être entretenus, je remplace donc les disques internes, barettes de RAM, lecteurs. Tout ce qui est démontable. Quand la réparation est trop coûteuse, il s'agit de trouver une seconde vie aux composants en état.</li>
 					<br>
-					<li><h3>Automates</h3>
+					<li><h3>Automates</h3>Low-Tech<br>
 					Par pur loisir, je fabrique des automates à manivelle, un temps de détente sur des gestes précis et une conception mécanique rudimentaire.
 					</li>
 				   
@@ -142,13 +150,9 @@
 				<p class="timeline__item-p"><h2>Écoute active</h2>
 				Les techniques d'écoute et de résolution de problèmes sont un bagage de ma formation de Gestion de Ressources Humaines et de vente. <br>
 			<br><h2>Création de contenu</h2>
-			J'aidais déjà des associations à créer des affiches et des vidéos pour leurs événements avant d'en faire une entreprise. Je serais ravi de transmettre les rudiments de la communication.
-		<br> 
-		<br><h2>Suivi personalisé</h2>
-			La pédagogie c'est aussi la question d'une relation et avec de simples notes sur l'avancement de chacun et les objectifs à atteindre, nous pouvons lier une relation de confiance permettant de s'épanouir à tout âge.
-			<br>
+			J'aidais déjà des associations à créer des affiches et des vidéos pour leurs événements avant d'en faire une entreprise. Je serais ravi de mettre en oeuvre les rudiments de la communication. 
 		<br> <h2>Action en synergie</h2>
-			Dans une démarche de création, on apprend que chaque contrainte est une part de travail économisée. Je suis donc à l'écoute des consignes sur le contenu à transmettre lors des interventions.
+			Dans une démarche de création, on apprend que chaque contrainte est une part de travail économisée. Je suis donc à l'écoute des objectifs à atteindre et des limites de notre mission.
 		</p>
 	</div>
 		</div>
