--- a/index.html
+++ b/index.html
@@ -71,8 +71,16 @@
 		<div class="timeline__item-body" id="item2-ctrld" role="region" aria-labelledby="item2" aria-hidden="true">
 			<div class="timeline__item-body-content">
 				<p class="timeline__item-p"><ul>
+					<li><h3>OpenClassRooms — En Alternance </h3> (septembre 2024) <br>
+						Recherche une entreprise d'accueil pour une formation Bac+2 Technicien Informatique. 
+						</li>
+						<br>
+					<li><h3>Windev Express</h3>PCsoft (depuis Juin 2024)</h3> <br>
+						Prise en main de Windev grâce à la <a href="https://doc.pcsoft.fr/fr-FR/?Tuto%20WINDEV%202024%20-%20Sommaire&redirected=1410086886">documentation d'autoformation</a>.
+						</li>
+						<br>
 					<li><h3>OpenClassRooms — à distance </h3>
-						Avril 2023 À Aujourd'hui: apprentissage de langages web & programmation.
+						Avril 2023 À Aujourd'hui: apprentissage de langages web & programmation. 
 						</li>
 						<br>
 					<li><h3>Licence Culture & Média</h3> L2 – ULCO Dunkerque 2012</h3> <br>
